# CFDrs

./: .gitignore  .gitmodules  3D_FEM_ADVANCED_METHODS.md  3D_FEM_INVESTIGATION.md  ACCOMPLISHMENTS.md  ADVANCED_METHODS_COMPLETION_SUMMARY.md  ALGORITHM_VALIDATION_REPORT.md  ARCHITECTURAL_PURIFICATION_REPORT.md  ARCHITECTURAL_RESTRUCTURING_PLAN.md  ARCHITECTURE.md  AUDIT_FIXES_APPLIED.md  AUDIT_REPORT.md  BUILD_FIXES_AND_ARCHITECTURE_ELEVATION.md  BUILD_STATUS.md  CAVITY_DEBUG_STATE.md  CFD_PYTHON_VALIDATION_REPORT.md  CFD_VALIDATION_ENHANCEMENTS.md  CHANGELOG.md  CHECKLIST.md  CHECKLIST_CURRENT.md  CODEBASE_REVIEW_SUMMARY.md  CODE_QUALITY_FIXES.md  CODE_REVIEW_FIXES_SUMMARY.md  COMPILATION_RECOVERY_REPORT.md  COMPLETED_WORK_SUMMARY.md  COMPLETE_2D_VALIDATION_SUMMARY.md  COMPLETE_VALIDATION_SUMMARY.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_VALIDATION_REPORT.md  CRITICAL_ASSESSMENT.md  CRITICAL_ISSUES.md  CRITICAL_REFACTORING_SUMMARY.md  CRITICAL_REVIEW_ASSESSMENT.md  CROSS_PACKAGE_VALIDATION_REPORT.md  CROSS_VALIDATION_COMPLETE_REPORT.md  CROSS_VALIDATION_REPORT.md  Cargo.toml  DELIVERABLES.md  DEVELOPMENT_LOG.md  EXPERT_REVIEW_SUMMARY.md  (+191 more)
crates/cfd-1d/: Cargo.toml  README.md  agents.md  fix_parens.py  fix_paths.py  math_purity.py
crates/cfd-1d/benches/: direct_solver_cutoff.rs  primitive_selective_solver.rs
crates/cfd-1d/docs/: VALIDATION_REPORT.md
crates/cfd-1d/examples/: blood_bifurcation.rs  cavitation_venturi_analysis.rs  fda_shear_limit_screening.rs  geometry_integration_demo.rs  hemolysis_serpentine_analysis.rs  medical_millifluidic_screening.rs  microfluidic_chip.rs  schematic_demo_integration.rs  tpms_blood_1d.rs  venturi_parallel_analysis.rs
crates/cfd-1d/outputs/: blood_bifurcation_results.json  microfluidic_chip_structure.json  simulation_results.json
crates/cfd-1d/src/: analysis.rs  analysis_fixed.rs  channel.rs  components.rs  components_old.rs.bak  constants.rs  lib.rs  network.rs  resistance.rs  scalar.rs  scheme_integration.rs  solver.rs
crates/cfd-1d/tests/: adversarial_tests.rs  analysis_tests.rs  blueprint_metadata_physics.rs  blueprint_solve_trace.rs  blueprint_validation.rs  branch_reverse_flow_orientation.rs  cell_separation_tests.rs  cell_separation_validation.rs  channel_solver_tests.rs  component_validation.rs  components_tests.rs  integration_schematics.rs  manufactured_network.rs  membrane_component_parity.rs  millifluidics_tests.rs  network_analysis_validation.rs  network_proptests.proptest-regressions  nonlinear_linearization_and_dirichlet.rs  primary_solve_reliability.rs  property_tests.rs  resistance_model_validation.rs  solver_core_tests.rs  spd_and_invariants.rs  transient_composition_parity.rs  transient_droplet_parity.rs  transient_literature_validation.rs
crates/cfd-2d/: Cargo.toml  agents.md
crates/cfd-2d/benches/: solver_benchmarks.rs
crates/cfd-2d/docs/: VALIDATION_REPORT.md
crates/cfd-2d/examples/: bifurcation_schematic.rs  blood_venturi.rs  cavitation_venturi_2d.rs  hemolysis_serpentine_2d.rs  medical_screening_2d.rs  serpentine_mixing_schematic.rs  serpentine_venturi_1d_vs_2d.rs  tpms_blood_2d.rs  venturi_schematic.rs
crates/cfd-2d/src/: constants.rs  convection.rs  energy.rs  error.rs  fdm.rs  field.rs  fields.rs  fvm.rs  grid.rs  lbm.rs  lib.rs  momentum.rs  piso.rs  piso_refactored.rs  piso_solver.rs  pressure.rs  pressure_velocity_coupling.rs  problem.rs  scalar.rs  schemes.rs  simple.rs  turbulence.rs  vorticity_stream.rs
crates/cfd-2d/tests/: blueprint_validation.rs  cif_junction_flow_split.rs  energy_equation_validation.rs  extended_boundary_conditions_validation.rs  ghia_cavity_simplec_validation.rs  momentum_solver_simple_tests.rs  muscl_validation.rs  n_furcation_flow_split.rs  poisson_fdm_validation.rs  primitive_selective_split_tree_cross_fidelity.rs  reynolds_stress_comprehensive_tests.rs  simplec_pimple_validation.rs  spalart_allmaras_comprehensive_tests.rs
crates/cfd-3d/: Cargo.toml  agents.md  backlog.md  checklist.md  gap_audit.md
crates/cfd-3d/benches/: smagorinsky_benchmark.rs
crates/cfd-3d/docs/: VALIDATION_REPORT.md
crates/cfd-3d/examples/: bifurcation_3d_blood.rs  serpentine_3d_dean.rs  spectral_poisson_3d.rs  venturi_3d_cavitation.rs
crates/cfd-3d/src/: atlas_anderson.rs  atlas_array.rs  cavitation.rs  constants.rs  fem.rs  ibm.rs  level_set.rs  lib.rs  linalg.rs  mesh_integration.rs  multiphase.rs  scalar.rs  spectral.rs  turbulence.rs  vof.rs  vof.rs.bak
crates/cfd-3d/tests/: blueprint_integration.rs  cascade_solver_test.rs  cavitation_solver_validation.rs  domain_solver_validation.rs  fem_boundary_conditions.rs  fem_tests.rs  fourier_validation.rs  ibm_tests.rs  level_set_tests.rs  poiseuille_test.rs  poisson_validation.rs  projection_solver_validation.rs  property_tests.rs  robustness_tests.rs  smagorinsky_test.rs  turbulence_math_tests.rs  venturi_blood_test.rs  vof_tests.rs
crates/cfd-core/: Cargo.toml  agents.md
crates/cfd-core/benches/: domain_benchmarks.rs  mpi_benchmarks.rs  smagorinsky_benchmark.rs  turbulence_benchmark.rs
crates/cfd-core/docs/: VALIDATION_REPORT.md  laplacian_validation_report.md
crates/cfd-core/src/: aggregates.rs  boundary.rs  broadcast.rs  cavitation.rs  constants.rs  conversion.rs  domain.rs  domain_fixed.rs  error.rs  error_fixed.rs  error_usage_example.rs  factory.rs  factory.rs.orig  fluid.rs  lib.rs  lib_temp.rs  numeric.rs  orchestration.rs  plugin.rs  problem.rs  services.rs  solver.rs  state.rs  time.rs  time_backup.rs  time_fixed.rs  values.rs
crates/cfd-core/tests/: backend_validation.rs  gpu_integration_test.rs  gpu_performance_validation.rs  (+2 more)
crates/cfd-fluidics/: ARCHITECTURE.md  Cargo.toml
crates/cfd-io/: Cargo.toml  agents.md
crates/cfd-math/: Cargo.toml  agents.md
crates/cfd-mesh/: CHECKLIST.md  Cargo.toml  agents.md  backlog.md  gap_audit.md
crates/cfd-optim/: Cargo.toml  agents.md
crates/cfd-schematics/: ARCHITECTURE.md  Cargo.toml  agents.md
crates/cfd-ui/: Cargo.toml  agents.md  index.html
crates/cfd-validation/: .gitignore  Cargo.toml  agents.md
crates/pycfdrs/: Cargo.toml  README.md  pyproject.toml
(+3165 files in other folders)
