[workspace]
members = [
    "crates/cfd-core",
    "crates/cfd-math",
    "crates/cfd-io",
    "crates/cfd-mesh",
    "crates/cfd-1d",
    "crates/cfd-2d", 
    "crates/cfd-3d",
    "crates/cfd-validation",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ryan Clanton <ryan@clanton.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ryancinsight/cfd-suite"
homepage = "https://github.com/ryancinsight/cfd-suite"
documentation = "https://docs.rs/cfd-suite"
readme = "README.md"
keywords = ["cfd", "simulation", "fluid-dynamics", "computational", "physics"]
categories = ["science", "simulation"]

[workspace.dependencies]
# Core dependencies
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Math and numerical
nalgebra = { version = "0.33", features = ["serde-serialize"] }
nalgebra-sparse = "0.10"
num-traits = "0.2"
approx = "0.5"
rand = "0.8"

# Data structures
indexmap = "2.0"
petgraph = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Parallel processing
rayon = "1.8"
crossbeam = "0.8"

# File I/O
csv = "1.3"

# Testing
proptest = "1.4"
criterion = "0.5"

# Internal crates
cfd-core = { path = "crates/cfd-core" }
cfd-math = { path = "crates/cfd-math" }
cfd-io = { path = "crates/cfd-io" }
cfd-mesh = { path = "crates/cfd-mesh" }
cfd-1d = { path = "crates/cfd-1d" }
cfd-2d = { path = "crates/cfd-2d" }
cfd-3d = { path = "crates/cfd-3d" }
cfd-validation = { path = "crates/cfd-validation" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
inherits = "release"

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 2

# Root package for examples
[package]
name = "cfd-suite"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Computational Fluid Dynamics Simulation Suite"
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[features]
default = ["gpu"]
gpu = ["cfd-core/gpu", "dep:wgpu"]
hdf5 = ["cfd-io/hdf5"]
csg = ["cfd-mesh/csg", "cfd-3d/csg"]

[dependencies]
cfd-core.workspace = true
cfd-math.workspace = true
cfd-io.workspace = true
cfd-mesh.workspace = true
cfd-1d.workspace = true
cfd-2d.workspace = true
cfd-3d.workspace = true
cfd-validation.workspace = true
nalgebra.workspace = true
num-traits.workspace = true
wgpu = { version = "0.19", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
approx = "0.5"
nalgebra-sparse = "0.10"

[[bench]]
name = "core_benchmarks"
harness = false

[[bench]]
name = "cfd_benchmarks"
harness = false

[[example]]
name = "pipe_flow_1d"
path = "examples/pipe_flow_1d.rs"

[[example]]
name = "spectral_performance"
path = "examples/spectral_performance.rs"

[[example]]
name = "scheme_integration_demo"

[[example]]
name = "pipe_flow_validation"
path = "examples/pipe_flow_validation.rs"

[[example]]
name = "pipe_flow_1d_validation"
path = "examples/pipe_flow_1d_validation.rs"

[[example]]
name = "venturi_cavitation"
path = "examples/venturi_cavitation.rs"
required-features = ["csg"]

# CSG-related examples gated by feature
[[example]]
name = "csg_primitives_demo"
path = "examples/csg_primitives_demo.rs"
required-features = ["csg"]

[[example]]
name = "csg_cfd_simulation"
path = "examples/csg_cfd_simulation.rs"
required-features = ["csg"]

[[example]]
name = "csg_operations"
path = "examples/csg_operations.rs"
required-features = ["csg"]

[[example]]
name = "mesh_3d_integration"
path = "examples/mesh_3d_integration.rs"
required-features = ["csg"]

[[example]]
name = "csgrs_api_test"
path = "examples/csgrs_api_test.rs"
required-features = ["csg"]

[[example]]
name = "test_csgrs"
path = "examples/test_csgrs.rs"
required-features = ["csg"]

[[bench]]
name = "performance_benchmarks"
harness = false

[[bench]]
name = "simd_spmv"
harness = false
