[workspace]
members = [
    "crates/cfd-core",
    "crates/cfd-math",
    "crates/cfd-io",
    "crates/cfd-schematics",
    "crates/cfd-1d",
    "crates/cfd-2d",
    "crates/cfd-3d",
    "crates/cfd-optim",
    "crates/cfd-validation",
    "crates/cfd-python",
    "xtask",
]
exclude = []
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Ryan Clanton <ryan@clanton.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ryancinsight/cfd-suite"
homepage = "https://github.com/ryancinsight/cfd-suite"
documentation = "https://docs.rs/cfd-suite"
readme = "README.md"
keywords = ["cfd", "simulation", "fluid-dynamics", "computational", "physics"]
categories = ["science", "simulation"]

[workspace.dependencies]
# Core dependencies
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Math and numerical
aequitas = { version = "0.1.0", git = "https://github.com/ryancinsight/aequitas", rev = "be3a1ac91286a17aecf18f0065d2aa6b385eb67b", default-features = false, features = ["std"] }
proteus = { git = "https://github.com/ryancinsight/proteus", rev = "335e5297b28c334987bd18bd85a09393a90dfe5f" }
tyche-core = { git = "https://github.com/ryancinsight/tyche", rev = "87923da922ec7bd17f12324c40d1da026be6b04e" }
eunomia = { git = "https://github.com/ryancinsight/eunomia", default-features = false, features = ["std"] }
iris = { git = "https://github.com/ryancinsight/iris", rev = "ef43861ae480ed199768580e0842968d98487e0f" }
approx = "0.5"
bytemuck = "1.14"
rand = "0.8"

# Data structures
indexmap = "2.0"
petgraph = "0.6"
slotmap = "1.0"

# Mesh / geometry
geometry-predicates = "0.3"

# Documentation
aquamarine = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }

# File I/O
csv = "1.3"

# Testing
proptest = "1.4"
criterion = "0.5"

# Internal crates
cfd-core = { path = "crates/cfd-core", default-features = false }
cfd-math = { path = "crates/cfd-math" }
cfd-io = { path = "crates/cfd-io" }
# Shared crates consumed from their canonical remotes (default branch = latest).
# Editable working copies live at the atlas root under repos/{gaia,apollo,consus};
# publish changes there (commit + push), then `cargo update -p <crate>`.
cfd-mesh = { package = "gaia", git = "https://github.com/ryancinsight/gaia.git" }
apollo-fft = { git = "https://github.com/ryancinsight/apollo.git" }
apollo-nufft = { git = "https://github.com/ryancinsight/apollo.git" }
leto = { git = "https://github.com/ryancinsight/leto.git", rev = "6545b6efe235daac04d78f2aa2522d3ccfaf284e", default-features = false, features = ["std"] }
leto-ops = { git = "https://github.com/ryancinsight/leto.git", rev = "6545b6efe235daac04d78f2aa2522d3ccfaf284e", default-features = false, features = ["std"] }
# consus: pure-Rust scientific storage formats (HDF5 etc.). Consumed by cfd-io
# behind the `hdf5` feature for real HDF5 output.
consus-core = { git = "https://github.com/ryancinsight/consus.git", default-features = false }
consus-hdf5 = { git = "https://github.com/ryancinsight/consus.git" }
# ritk: RITK imaging toolkit; owns the VTK data model and I/O. Consumed by
# cfd-io behind the `vtk` feature for VTK creation.
ritk-vtk = { path = "../ritk/crates/ritk-vtk" }
# hermes: SIMD abstraction workspace. Provides generic runtime-dispatched
# SIMD operations (dot, elementwise, reductions) over f32/f64/i32.
hermes-simd = { git = "https://github.com/ryancinsight/hermes.git" }
# moirai: unified concurrency runtime replacing tokio + rayon. Moirai's parallel,
# Mnemosyne, and Melinoe surfaces are enabled for the CFDrs workspace.
moirai = { git = "https://github.com/ryancinsight/Moirai.git", rev = "5ead788c70c728d971237d7afa0b915ea7cf87e3", default-features = false, features = ["parallel", "mnemosyne", "melinoe"] }
# hephaestus-wgpu: Atlas GPU provider used for device acquisition and the
# ongoing replacement of CFDrs-owned raw WGPU kernels.
hephaestus-wgpu = { git = "https://github.com/ryancinsight/hephaestus.git" }
cfd-schematics = { path = "crates/cfd-schematics" }
cfd-1d = { path = "crates/cfd-1d" }
cfd-2d = { path = "crates/cfd-2d" }
cfd-3d = { path = "crates/cfd-3d" }
cfd-optim = { path = "crates/cfd-optim" }
cfd-validation = { path = "crates/cfd-validation" }

[patch."https://github.com/ryancinsight/aequitas"]
aequitas = { path = "../aequitas" }

[patch."https://github.com/ryancinsight/CFDrs.git"]
cfd-schematics = { path = "crates/cfd-schematics" }

[patch."https://github.com/ryancinsight/apollo.git"]
apollo-fft = { path = "../apollo/crates/apollo-fft" }
apollo-nufft = { path = "../apollo/crates/apollo-nufft" }

[patch."https://github.com/ryancinsight/Mnemosyne.git"]
mnemosyne = { path = "../mnemosyne/crates/mnemosyne" }
mnemosyne-core = { path = "../mnemosyne/crates/mnemosyne-core" }
mnemosyne-arena = { path = "../mnemosyne/crates/mnemosyne-arena" }
mnemosyne-local = { path = "../mnemosyne/crates/mnemosyne-local" }
mnemosyne-heap = { path = "../mnemosyne/crates/mnemosyne-heap" }

[patch."https://github.com/ryancinsight/Moirai.git"]
moirai = { path = "../moirai/moirai" }
moirai-core = { path = "../moirai/moirai-core" }
moirai-scheduler = { path = "../moirai/moirai-scheduler" }
moirai-parallel = { path = "../moirai/moirai-parallel" }

[patch."https://github.com/ryancinsight/eunomia"]
eunomia = { path = "../eunomia/crates/eunomia" }

[patch."https://github.com/ryancinsight/leto.git"]
leto = { path = "../leto/crates/leto" }
leto-ops = { path = "../leto/crates/leto-ops" }

[patch."https://github.com/ryancinsight/gaia.git"]
gaia = { path = "../gaia" }

[patch."https://github.com/ryancinsight/hephaestus.git"]
hephaestus-wgpu = { path = "../hephaestus/crates/hephaestus-wgpu" }

[patch."https://github.com/ryancinsight/hermes.git"]
hermes-simd = { path = "../hermes/crates/hermes-simd" }

[patch."https://github.com/ryancinsight/iris"]
iris = { path = "../iris" }

[patch."https://github.com/ryancinsight/melinoe.git"]
melinoe = { path = "../melinoe" }

[patch."https://github.com/ryancinsight/themis"]
themis = { path = "../themis" }

[patch."https://github.com/ryancinsight/tyche"]
tyche-core = { path = "../tyche/crates/tyche-core" }

[profile.release]
opt-level = 3

[profile.bench]
inherits = "release"

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 2

# Root package for examples
[package]
name = "cfd-suite"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Computational Fluid Dynamics Simulation Suite"
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[features]
default = ["gpu"]
gpu = ["cfd-core/gpu"]

simd = ["cfd-core/simd"]
millifluidic = ["cfd-mesh/millifluidic"]
scheme-io = ["cfd-mesh/scheme-io"]
legacy-benches = []
# Gate validation suite behind an opt-in feature so it does not block
# default workspace builds when its imports are stale.
validation = ["dep:cfd-validation"]

[dependencies]
cfd-core.workspace = true
cfd-math.workspace = true
cfd-io.workspace = true
cfd-mesh.workspace = true
cfd-schematics.workspace = true
cfd-1d.workspace = true
cfd-2d.workspace = true
cfd-3d.workspace = true
iris.workspace = true
# cfd-validation is optional — compile explicitly with `cargo test -p cfd-validation`
# or enable via `--features validation`.
cfd-validation = { workspace = true, optional = true }
leto.workspace = true
petgraph.workspace = true
rand.workspace = true
tracing = { workspace = true }

[dev-dependencies]
aequitas.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
approx = "0.5"
leto-ops.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.17"
tracing-subscriber = { workspace = true }
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "line_series"] }
cfd-optim.workspace = true
apollo-fft.workspace = true

[[bench]]
name = "core_benchmarks"
harness = false

[[bench]]
name = "cfd_benchmarks"
harness = false


[[example]]
name = "spectral_performance"
path = "examples/spectral_performance.rs"

[[example]]
name = "matrix_free_demo"
path = "examples/matrix_free_demo.rs"
required-features = ["legacy-benches"]






[[example]]
name = "venturi_cavitation"
path = "examples/venturi_cavitation.rs"



[[example]]
name = "csg_primitives_demo"
path = "examples/csg_primitives_demo.rs"


[[example]]
name = "csg_cfd_simulation"
path = "examples/csg_cfd_simulation.rs"


[[example]]
name = "csg_operations"
path = "examples/csg_operations.rs"


[[example]]
name = "mesh_3d_integration"
path = "examples/mesh_3d_integration.rs"


[[example]]
name = "csgrs_api_test"
path = "examples/csgrs_api_test.rs"


[[example]]
name = "test_csgrs"
path = "examples/test_csgrs.rs"


[[bench]]
name = "performance_benchmarks"
harness = false

[[bench]]
name = "gpu_turbulence_benchmark"
harness = false
required-features = ["legacy-benches"]

[[bench]]
name = "solver_performance"
harness = false

[[bench]]
name = "preconditioner_benchmark"
harness = false

[[bench]]
name = "turbulence_model_benchmarks"
harness = false
required-features = ["legacy-benches"]

[[bench]]
name = "vector_simd_benchmark"
harness = false
required-features = ["simd"]

[[bench]]
name = "cfd_3d_benchmarks"
harness = false

[[bench]]
name = "delaunay_3d"
harness = false

[[bench]]
name = "fem_assembly"
harness = false
