[package]
name = "cfd-1d"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "1D CFD simulations for microfluidic networks"

[dependencies]
cfd-core = { path = "../cfd-core" }
cfd-math = { path = "../cfd-math" }
nalgebra.workspace = true
nalgebra-sparse = "0.10"
sprs = "0.11"
num-traits.workspace = true
petgraph.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rand.workspace = true
approx.workspace = true
rayon = "1.10"
tracing = "0.1"

# 2D schematic visualization support
scheme = { git = "https://github.com/ryancinsight/scheme", optional = true }

[dev-dependencies]
tracing-subscriber = "0.3"

[features]
default = []
# Enable 2D schematic visualization support
scheme-integration = ["scheme"]

