[package]
name = "cfd-1d"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "1D CFD simulations for microfluidic networks"

[features]
default = []
scheme-integration = ["dep:scheme"]

[dependencies]
cfd-core = { path = "../cfd-core" }
cfd-math = { path = "../cfd-math" }
scheme = { path = "../../../scheme", optional = true }
nalgebra.workspace = true
nalgebra-sparse = "0.10"
sprs = "0.11"
num-traits.workspace = true
petgraph.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rand.workspace = true
approx.workspace = true
rayon = "1.10"
tracing = "0.1"

[dev-dependencies]
scheme = { path = "../../../scheme" }
tracing-subscriber = "0.3"
proptest = "1.0"

