[package]
name = "cfd-1d"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "1D CFD simulations for microfluidic networks"

[features]
default = []

[dependencies]
cfd-core = { path = "../cfd-core" }
cfd-math = { path = "../cfd-math" }
cfd-schematics = { path = "../cfd-schematics" }
eunomia.workspace = true
leto.workspace = true
leto-ops.workspace = true
num-traits.workspace = true
petgraph.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rand.workspace = true
approx.workspace = true
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.3"
proptest = "1.0"
criterion.workspace = true

[[bench]]
name = "primitive_selective_solver"
harness = false

[[bench]]
name = "direct_solver_cutoff"
harness = false
