[package]
name = "cfd-2d"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "2D CFD solvers including FDM, FVM, and LBM implementations"

[dependencies]
cfd-core.workspace = true
cfd-math.workspace = true
cfd-mesh.workspace = true
cfd-io.workspace = true
cfd-1d.workspace = true
cfd-schematics = { path = "../cfd-schematics" }
petgraph.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
moirai.workspace = true
eunomia.workspace = true
leto.workspace = true
leto-ops.workspace = true
tracing.workspace = true

[features]
gpu = ["cfd-core/gpu"]

[dev-dependencies]
cfd-schematics = { path = "../cfd-schematics" }
cfd-validation = { path = "../cfd-validation" }
iris.workspace = true
plotters = { version = "0.3.5", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "svg_backend", "line_series", "ttf"] }
serde_json.workspace = true
proptest.workspace = true
approx.workspace = true
criterion.workspace = true
rand.workspace = true

[[bench]]
name = "solver_benchmarks"
harness = false
