[package]
name = "cfd-3d"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "3D CFD solvers with CSGrs mesh integration"

[dependencies]
cfd-1d.workspace = true
cfd-2d.workspace = true
cfd-core.workspace = true
cfd-math.workspace = true
cfd-mesh = { workspace = true, features = ["cfdrs-integration"] }
cfd-io.workspace = true
apollofft.workspace = true
ndarray.workspace = true
cfd-schematics.workspace = true
nalgebra.workspace = true
nalgebra-sparse.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
rayon.workspace = true
crossbeam.workspace = true
num-traits.workspace = true
tracing.workspace = true
# csgrs = { version = "0.19", features = ["f64", "stl-io", "delaunay"], optional = true }

[features]
default = []


[dev-dependencies]
proptest.workspace = true
approx.workspace = true
criterion.workspace = true
cfd-validation.workspace = true
cfd-schematics.workspace = true

[[bench]]
name = "smagorinsky_benchmark"
harness = false
