[package]
name = "cfd-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Core abstractions and plugin system for the CFD simulation suite"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
wgpu = { version = "0.19", optional = true }
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"
futures = "0.3"
num_cpus = "1.16"
nalgebra.workspace = true
nalgebra-sparse.workspace = true
num-traits.workspace = true
indexmap.workspace = true
rayon.workspace = true
mpi = { version = "0.8", optional = true, default-features = false }

[features]
default = ["gpu"]
gpu = ["dep:wgpu"]
mpi = ["dep:mpi"]
simd = []
experimental = []

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true
tracing-subscriber.workspace = true
approx.workspace = true
tokio = { version = "1.0", features = ["full"] }
