[package]
name = "cfd-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Core abstractions and plugin system for the CFD simulation suite"

[dependencies]
aequitas.workspace = true
chrono = { version = "0.4", features = ["serde"] }
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
bytemuck = { version = "1.14", features = ["derive"] }
futures = "0.3"
num_cpus = "1.16"
leto.workspace = true
eunomia.workspace = true
indexmap.workspace = true
moirai.workspace = true
hephaestus-wgpu = { workspace = true, optional = true }

[features]
default = ["gpu"]
gpu = ["dep:hephaestus-wgpu"]
simd = []
experimental = []

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true
tracing-subscriber.workspace = true
approx.workspace = true

[[bench]]
name = "turbulence_benchmark"
harness = false
required-features = ["gpu"]
