[package]
name = "cfd-io"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "I/O operations and file format support for CFD simulations"

[dependencies]
cfd-core.workspace = true
cfd-math.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode = { version = "2.0", features = ["serde"] }
csv.workspace = true
nalgebra.workspace = true
num-traits.workspace = true
tracing.workspace = true
zstd = "0.13"
tempfile = "3.8"
rayon.workspace = true
bytemuck.workspace = true

[features]
default = []
mpi = ["cfd-core/mpi"]

[dev-dependencies]
tempfile = "3.8"
proptest.workspace = true
approx.workspace = true
