[package]
name = "cfd-io"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "I/O operations and file format support for CFD simulations"

[dependencies]
cfd-core.workspace = true
cfd-math.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode = { version = "2.0", features = ["serde"] }
csv.workspace = true
nalgebra.workspace = true
num-traits.workspace = true
tracing.workspace = true
zstd = "0.13"
tempfile = "3.8"
rayon.workspace = true
bytemuck.workspace = true
consus-core = { workspace = true, optional = true }
consus-hdf5 = { workspace = true, optional = true }

[features]
default = []
mpi = ["cfd-core/mpi"]
# Real HDF5 output backed by the pure-Rust consus-hdf5 implementation.
# Independent of MPI; usable and testable on any platform.
hdf5 = ["dep:consus-core", "dep:consus-hdf5"]

[dev-dependencies]
tempfile = "3.8"
proptest.workspace = true
approx.workspace = true
# Memory-backed reader used to validate written HDF5 images in round-trip tests.
consus-io = { git = "https://github.com/ryancinsight/consus.git" }
