[package]
name = "cfd-io"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "I/O operations and file format support for CFD simulations"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode = { version = "2.0", features = ["serde"] }
csv.workspace = true
leto.workspace = true
eunomia.workspace = true
tracing.workspace = true
zstd = "0.13"
tempfile = "3.8"
consus-core = { workspace = true, optional = true }
consus-hdf5 = { workspace = true, optional = true }
ritk-vtk = { workspace = true, optional = true }

[features]
default = []
# Real HDF5 output backed by the pure-Rust consus-hdf5 implementation.
# Independent of MPI; usable and testable on any platform.
hdf5 = ["dep:consus-core", "dep:consus-hdf5"]
# VTK creation and I/O, provided by the ritk-vtk crate (RITK toolkit owns VTK).
# Re-exported as `cfd_io::vtk`.
vtk = ["dep:ritk-vtk"]

[dev-dependencies]
tempfile = "3.8"
proptest.workspace = true
# Memory-backed reader used to validate written HDF5 images in round-trip tests.
consus-io = { git = "https://github.com/ryancinsight/consus.git" }
