[package]
name = "cfd-math"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Mathematical utilities and numerical methods for CFD simulations"

[dependencies]
cfd-core.workspace = true
nalgebra.workspace = true
nalgebra-sparse.workspace = true
num-traits.workspace = true
num-complex.workspace = true
rayon.workspace = true
approx.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
bytemuck.workspace = true
wgpu = { workspace = true, optional = true }
futures = { version = "0.3", optional = true }
pollster = { workspace = true, optional = true }
rand.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true
approx.workspace = true
tokio = { version = "1.0", features = ["rt", "macros"] }

[features]
default = []
gpu = ["dep:wgpu", "dep:futures", "dep:pollster", "cfd-core/gpu"]
mpi = []

[[bench]]
name = "math_benchmarks"
harness = false

[[bench]]
name = "flux_alloc_bench"
harness = false

[[bench]]
name = "coarsening_bench"
harness = false

[[bench]]
name = "algebraic_distance_bench"
harness = false

[[bench]]
name = "spmv_bench"
harness = false

[[bench]]
name = "window_iterator_bench"
harness = false

[[bench]]
name = "imex_bench"
harness = false

[[bench]]
name = "swar_ops_bench"
harness = false

[[bench]]
name = "gpu_operator_bench"
harness = false
