[package]
name = "cfd-math"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Mathematical utilities and numerical methods for CFD simulations"

[dependencies]
aequitas.workspace = true
cfd-core.workspace = true
eunomia.workspace = true
leto.workspace = true
leto-ops.workspace = true
moirai.workspace = true
hermes-simd.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
bytemuck.workspace = true
futures = { version = "0.3", optional = true }
rand.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true
# nalgebra is added exclusively as a dev-dependency so legacy and Atlas
# parity benchmarks can compare the two stacks side-by-side on the same
# 1D Poisson problem. It is NOT pulled into runtime dependencies.
nalgebra = { version = "0.33", default-features = false, features = ["std"] }

[features]
default = []
gpu = ["dep:futures", "cfd-core/gpu"]

[[bench]]
name = "math_benchmarks"
harness = false

[[bench]]
name = "flux_alloc_bench"
harness = false

[[bench]]
name = "coarsening_bench"
harness = false

[[bench]]
name = "algebraic_distance_bench"
harness = false

[[bench]]
name = "spmv_bench"
harness = false

[[bench]]
name = "window_iterator_bench"
harness = false

[[bench]]
name = "imex_bench"
harness = false

[[bench]]
name = "swar_ops_bench"
harness = false

[[bench]]
name = "rk4_bench"
harness = false

[[bench]]
name = "cg_bench"
harness = false
